--- a/app/src/main/res/layout/cardview_contacto.xml
+++ b/app/src/main/res/layout/cardview_contacto.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools">
+    xmlns:card_view="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    >
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvContacto"
@@ -36,7 +37,7 @@
                 android:layout_gravity="center_horizontal"
                 android:scaleType="centerCrop"
                 android:src="@drawable/mushroom"/>
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -45,14 +46,16 @@
                 android:id="@+id/btnLike"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:background="@drawable/ic_baseline_favorite_24"/>
+                android:background="@drawable/ic_baseline_favorite_24"
+                android:layout_alignParentLeft="true"/>
+
             <LinearLayout
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginLeft="10dp">
-
+                android:layout_centerHorizontal="true"
+                >
                 <TextView
                     android:id="@+id/tvNombreCV"
                     android:layout_width="match_parent"
@@ -64,10 +67,19 @@
                     android:id="@+id/tvTelefonoCV"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="@string/telefono"/>
+                    android:text="@string/telefono"
+                    />
 
             </LinearLayout>
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/tvLikes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/plikes"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:textSize="20sp"/>
+        </RelativeLayout>
       </LinearLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
