--- a/app/src/main/res/layout/cardview_perfilmascota.xml
+++ b/app/src/main/res/layout/cardview_perfilmascota.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     >
 
     <androidx.cardview.widget.CardView
@@ -44,7 +44,7 @@
 
              <TextView
                  android:id="@+id/tvRatingCVM"
-                 android:layout_width="wrap_content"
+                 android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="0"
                  android:textStyle="bold"
@@ -58,7 +58,7 @@
                  android:layout_marginLeft="10dp"
                  android:background="@drawable/boneyellow"/>
 
-         </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
