--- a/app/src/main/res/layout/fragment_mascota.xml
+++ b/app/src/main/res/layout/fragment_mascota.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MascotaFragment">
+    tools:context="vista.fragment.MascotaFragment">
 
     <LinearLayout
         android:id="@+id/llinicial"
@@ -45,6 +45,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"/>
-    </LinearLayout>
 
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
