--- a/app/src/main/res/layout/fragment_mascotas.xml
+++ b/app/src/main/res/layout/fragment_mascotas.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MascotasFragment">
+    tools:context="vista.fragment.MascotasFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvMascotas"
