--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -19,4 +19,8 @@
         android:id="@+id/mListado"
         android:title="@string/menu_lista_contactos"
         android:orderInCategory="103"/>
+    <item
+        android:id="@+id/mNotificaciones"
+        android:title="@string/menu_recibir_notificaciones"
+        android:orderInCategory="103"/>
 </menu>
